# quickshare-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  env.example  fly.toml
coturn/: turnserver.conf
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/controllers/: health.rs  mod.rs  session.rs  websocket.rs
src/extractors/: client_ip.rs  mod.rs
src/middleware/: cors.rs  mod.rs
src/models/: api.rs  mod.rs  session.rs  signaling.rs
src/routes/: health.rs  mod.rs  session.rs  websocket.rs
src/services/: cloudflare_turn.rs  code_generator.rs  hmac.rs  mod.rs  rate_limiter.rs  session.rs
tests/integration/: session_test.rs  signaling_test.rs
