[package]
name = "nameshare-backend"
version = "0.1.0"
edition = "2021"
authors = ["Nameshare Team"]
description = "Production-ready P2P file sharing service with 6-digit code access"

[dependencies]
# HTTP Framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "request-id"] }
http = "1.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# Redis
deadpool-redis = "0.15"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
rand = { version = "0.8", features = ["std_rng"] }
getrandom = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# Encoding
base64 = "0.22"
hex = "0.4"

# Utilities
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3"

[[bin]]
name = "nameshare-backend"
path = "src/main.rs"
